day5/iptables
# Generated by iptables-save v1.8.11 (nf_tables) on Fri May 29 15:12:04 2026
*mangle
:PREROUTING ACCEPT [7334:12787592]
:INPUT ACCEPT [6618:12635819]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [6445:1267295]
:POSTROUTING ACCEPT [5385:1163435]
COMMIT
# Completed on Fri May 29 15:12:04 2026
# Generated by iptables-save v1.8.11 (nf_tables) on Fri May 29 15:12:04 2026
*raw
:PREROUTING ACCEPT [7334:12787592]
:OUTPUT ACCEPT [6445:1267295]
COMMIT
# Completed on Fri May 29 15:12:04 2026
# Generated by iptables-save v1.8.11 (nf_tables) on Fri May 29 15:12:04 2026
*filter
:INPUT DROP [676:124509]
:FORWARD ACCEPT [0:0]
:OUTPUT DROP [1060:103860]
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 53 -j ACCEPT
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -p icmp -j ACCEPT
-A OUTPUT -d 192.168.1.1/32 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 443 -d 212.77.98.9 -j ACCEPT
COMMIT
# Completed on Fri May 29 15:12:04 2026
# Generated by iptables-save v1.8.11 (nf_tables) on Fri May 29 15:12:04 2026
*nat
:PREROUTING ACCEPT [1392:276282]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [1456:128777]
:POSTROUTING ACCEPT [396:24917]
COMMIT
# Completed on Fri May 29 15:12:04 2026
